# lecture-9

./: Dockerfile  pyproject.toml  railway.json  sql_app.db
alembic/: env.py
alembic/versions/: 125508b396e9_change.py  a3ba5caa32c0_remove_password.py  dc5f8713599d_first_migration.py
app/: items_repository.py  main.py  users_repository.py
scripts/: launch.sh
