[tool.poetry]
name = "sandbox3"
version = "0.1.0"
description = ""
authors = ["Alimukhamed Tlekbai <ali.tlekbai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
attrs = "^23.1.0"
alembic = "^1.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
